--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,4 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.App { text-align: center; }
+.header { font-weight: bold; background-color: #f90 }
+.divx { width: 49%; height: 20px; position:relative; }
+.divx div, .item { width: 33%; float: left; height: auto; border: solid 1px #ccc; }
